// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test ModeSwitcher render snapshot with Array<object> type options 1`] = `
<div>
  <div
    class="ant-row actiontech-mode-switcher css-dev-only-do-not-override-txh9fw"
  >
    <div
      class="ant-col ant-col-2 css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="actiontech-mode-switcher-item css-nje3gm"
      >
        <span
          class="actiontech-mode-switcher-item-icon"
        >
          <span>
            icon
          </span>
        </span>
        <span
          class="actiontech-mode-switcher-item-text"
        >
          label1
        </span>
        <div
          class="active-icon-wrapper"
          hidden=""
        >
          <span
            class="icon-mode-switcher-checked active-icon css-u3jcp4"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                id="Frame"
              >
                <path
                  d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                  id="Vector"
                  stroke="#FCFBF9"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </g>
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="ant-col ant-col-2 css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="actiontech-mode-switcher-item css-nje3gm"
      >
        <span
          class="actiontech-mode-switcher-item-icon"
        >
          <span>
            icon
          </span>
        </span>
        <span
          class="actiontech-mode-switcher-item-text"
        >
          label2
        </span>
        <div
          class="active-icon-wrapper"
          hidden=""
        >
          <span
            class="icon-mode-switcher-checked active-icon css-u3jcp4"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                id="Frame"
              >
                <path
                  d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                  id="Vector"
                  stroke="#FCFBF9"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </g>
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="ant-col ant-col-2 css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="actiontech-mode-switcher-item css-nje3gm"
      >
        <span
          class="actiontech-mode-switcher-item-icon"
        >
          <span>
            icon
          </span>
        </span>
        <span
          class="actiontech-mode-switcher-item-text"
        >
          label3
        </span>
        <div
          class="active-icon-wrapper"
          hidden=""
        >
          <span
            class="icon-mode-switcher-checked active-icon css-u3jcp4"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                id="Frame"
              >
                <path
                  d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                  id="Vector"
                  stroke="#FCFBF9"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </g>
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test ModeSwitcher render snapshot with Array<object> type options 2`] = `
<div>
  <div
    class="ant-row actiontech-mode-switcher css-dev-only-do-not-override-txh9fw"
  >
    <div
      class="ant-col ant-col-2 css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="actiontech-mode-switcher-item actiontech-mode-switcher-item-active css-uhk931"
      >
        <span
          class="actiontech-mode-switcher-item-icon"
        >
          <span>
            icon
          </span>
        </span>
        <span
          class="actiontech-mode-switcher-item-text"
        >
          label1
        </span>
        <div
          class="active-icon-wrapper"
        >
          <span
            class="icon-mode-switcher-checked active-icon css-u3jcp4"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                id="Frame"
              >
                <path
                  d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                  id="Vector"
                  stroke="#FCFBF9"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </g>
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="ant-col ant-col-2 css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="actiontech-mode-switcher-item css-nje3gm"
      >
        <span
          class="actiontech-mode-switcher-item-icon"
        >
          <span>
            icon
          </span>
        </span>
        <span
          class="actiontech-mode-switcher-item-text"
        >
          label2
        </span>
        <div
          class="active-icon-wrapper"
          hidden=""
        >
          <span
            class="icon-mode-switcher-checked active-icon css-u3jcp4"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                id="Frame"
              >
                <path
                  d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                  id="Vector"
                  stroke="#FCFBF9"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </g>
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="ant-col ant-col-2 css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="actiontech-mode-switcher-item css-nje3gm"
      >
        <span
          class="actiontech-mode-switcher-item-icon"
        >
          <span>
            icon
          </span>
        </span>
        <span
          class="actiontech-mode-switcher-item-text"
        >
          label3
        </span>
        <div
          class="active-icon-wrapper"
          hidden=""
        >
          <span
            class="icon-mode-switcher-checked active-icon css-u3jcp4"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                id="Frame"
              >
                <path
                  d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                  id="Vector"
                  stroke="#FCFBF9"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </g>
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test ModeSwitcher render snapshot with Array<object> type options and control 1`] = `
<div>
  <div
    class="ant-row actiontech-mode-switcher css-dev-only-do-not-override-txh9fw"
    style="margin-left: -5px; margin-right: -5px;"
  >
    <div
      class="ant-col ant-col-2 css-dev-only-do-not-override-txh9fw"
      style="padding-left: 5px; padding-right: 5px;"
    >
      <div
        class="actiontech-mode-switcher-item css-nje3gm"
      >
        <span
          class="actiontech-mode-switcher-item-icon"
        >
          <span>
            icon
          </span>
        </span>
        <span
          class="actiontech-mode-switcher-item-text"
        >
          label1
        </span>
        <div
          class="active-icon-wrapper"
          hidden=""
        >
          <span
            class="icon-mode-switcher-checked active-icon css-u3jcp4"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                id="Frame"
              >
                <path
                  d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                  id="Vector"
                  stroke="#FCFBF9"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </g>
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="ant-col ant-col-2 css-dev-only-do-not-override-txh9fw"
      style="padding-left: 5px; padding-right: 5px;"
    >
      <div
        class="actiontech-mode-switcher-item css-nje3gm"
      >
        <span
          class="actiontech-mode-switcher-item-icon"
        >
          <span>
            icon
          </span>
        </span>
        <span
          class="actiontech-mode-switcher-item-text"
        >
          label2
        </span>
        <div
          class="active-icon-wrapper"
          hidden=""
        >
          <span
            class="icon-mode-switcher-checked active-icon css-u3jcp4"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                id="Frame"
              >
                <path
                  d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                  id="Vector"
                  stroke="#FCFBF9"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </g>
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="ant-col ant-col-2 css-dev-only-do-not-override-txh9fw"
      style="padding-left: 5px; padding-right: 5px;"
    >
      <div
        class="actiontech-mode-switcher-item actiontech-mode-switcher-item-active css-uhk931"
      >
        <span
          class="actiontech-mode-switcher-item-icon"
        >
          <span>
            icon
          </span>
        </span>
        <span
          class="actiontech-mode-switcher-item-text"
        >
          label3
        </span>
        <div
          class="active-icon-wrapper"
        >
          <span
            class="icon-mode-switcher-checked active-icon css-u3jcp4"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                id="Frame"
              >
                <path
                  d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                  id="Vector"
                  stroke="#FCFBF9"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </g>
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  value3
</div>
`;

exports[`test ModeSwitcher render snapshot with Array<string> type options 1`] = `
<div>
  <div
    class="ant-row actiontech-mode-switcher css-dev-only-do-not-override-txh9fw"
  >
    <div
      class="ant-col css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="actiontech-mode-switcher-item css-nje3gm"
      >
        <span
          class="actiontech-mode-switcher-item-icon"
        />
        <span
          class="actiontech-mode-switcher-item-text"
        >
          key1
        </span>
        <div
          class="active-icon-wrapper"
          hidden=""
        >
          <span
            class="icon-mode-switcher-checked active-icon css-u3jcp4"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                id="Frame"
              >
                <path
                  d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                  id="Vector"
                  stroke="#FCFBF9"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </g>
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="ant-col css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="actiontech-mode-switcher-item css-nje3gm"
      >
        <span
          class="actiontech-mode-switcher-item-icon"
        />
        <span
          class="actiontech-mode-switcher-item-text"
        >
          key2
        </span>
        <div
          class="active-icon-wrapper"
          hidden=""
        >
          <span
            class="icon-mode-switcher-checked active-icon css-u3jcp4"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                id="Frame"
              >
                <path
                  d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                  id="Vector"
                  stroke="#FCFBF9"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </g>
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="ant-col css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="actiontech-mode-switcher-item css-nje3gm"
      >
        <span
          class="actiontech-mode-switcher-item-icon"
        />
        <span
          class="actiontech-mode-switcher-item-text"
        >
          key3
        </span>
        <div
          class="active-icon-wrapper"
          hidden=""
        >
          <span
            class="icon-mode-switcher-checked active-icon css-u3jcp4"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                id="Frame"
              >
                <path
                  d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                  id="Vector"
                  stroke="#FCFBF9"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </g>
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test ModeSwitcher render snapshot with Array<string> type options 2`] = `
<div>
  <div
    class="ant-row actiontech-mode-switcher css-dev-only-do-not-override-txh9fw"
  >
    <div
      class="ant-col css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="actiontech-mode-switcher-item actiontech-mode-switcher-item-active css-uhk931"
      >
        <span
          class="actiontech-mode-switcher-item-icon"
        />
        <span
          class="actiontech-mode-switcher-item-text"
        >
          key1
        </span>
        <div
          class="active-icon-wrapper"
        >
          <span
            class="icon-mode-switcher-checked active-icon css-u3jcp4"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                id="Frame"
              >
                <path
                  d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                  id="Vector"
                  stroke="#FCFBF9"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </g>
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="ant-col css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="actiontech-mode-switcher-item css-nje3gm"
      >
        <span
          class="actiontech-mode-switcher-item-icon"
        />
        <span
          class="actiontech-mode-switcher-item-text"
        >
          key2
        </span>
        <div
          class="active-icon-wrapper"
          hidden=""
        >
          <span
            class="icon-mode-switcher-checked active-icon css-u3jcp4"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                id="Frame"
              >
                <path
                  d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                  id="Vector"
                  stroke="#FCFBF9"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </g>
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="ant-col css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="actiontech-mode-switcher-item css-nje3gm"
      >
        <span
          class="actiontech-mode-switcher-item-icon"
        />
        <span
          class="actiontech-mode-switcher-item-text"
        >
          key3
        </span>
        <div
          class="active-icon-wrapper"
          hidden=""
        >
          <span
            class="icon-mode-switcher-checked active-icon css-u3jcp4"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 14 14"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                id="Frame"
              >
                <path
                  d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                  id="Vector"
                  stroke="#FCFBF9"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </g>
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
